# chatwoot-bot

./: .env.example  .gitignore  README.md  chat.py  cleanup_mcp_qdrant.py  cleanup_qdrant.py  config.py  docker-compose.yml  dockerfile  graph.py  logger_config.py  main.py  pyproject.toml  settings.py  test_consumer.py  vecotorize.sh  vectorize.py  vectorize.sh  vectorize_mcp_qdrant.py  vectorize_qdrant.py
bot/: State.py  __init__.py  graph.py
bot/cache/: __init__.py  dict_cache.py  redis_cache.py
bot/generation/: __init__.py
bot/retrieval/: __init__.py  retrieval_mcp_qdrant.py  retrieval_qdrant.py
chatwoot/: __init__.py
data/: knowledgebase.md
example_data/: domain.md  error_codes.md  plans.md  site_not_working.md
