[project]
name = "chatwoot-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "confluent-kafka>=2.10.0",
    "dotenv>=0.9.9",
    "langchain>=0.3.24",
    "langchain-chroma>=0.2.3",
    "langchain-community>=0.3.23",
    "langchain-core>=0.3.56",
    "langchain-openai>=0.3.16",
    "langchain-text-splitters>=0.3.8",
    "langgraph>=0.4.1",
    "redis>=6.2.0",
]
