[project]
name = "chatwoot-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "confluent-kafka>=2.10.0",
    "dotenv>=0.9.9",
    "langchain>=0.3.24",
    "langchain-chroma>=0.2.3",
    "langchain-community>=0.3.23",
    "langchain-core>=0.3.56",
    "langchain-google-genai>=2.1.12",
    "langchain-google-vertexai>=2.1.2",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-ollama>=0.3.10",
    "langchain-openai>=0.3.16",
    "langchain-qdrant>=0.2.1",
    "langchain-text-splitters>=0.3.8",
    "langgraph>=0.4.1",
    "langgraph-checkpoint-redis>=0.0.6",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "qdrant-client>=1.14.2",
    "redis>=6.2.0",
]
